# ray-tracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
assets/: CMakeLists.txt
dependencies/include/glad/: glad.h
renderer/: renderer.cpp
src/: CMakeLists.txt  Hittable.h  HittableList.h  Sphere.h  Vector3.h  camera.cpp  camera.h  glad.c  hittable_list.h  interval.h  main.cpp  material.h  ray.h  renderer.cpp  renderer.h  utils.h  vec3.cpp  vec3.h
src/CPU/: interval.cpp  interval.h  renderer.cpp  vector3.h
src/cpu_raytracer/: camera.cpp  camera.h  renderer.cpp  renderer.h  sphere.h
